# tcl

./: .gitignore  CMakeLists.txt  README.md  main.py
python/: pyproject.toml  setup.py
python/tcl/: __init__.py  base.py  libinfo.py
python/tcl/jit/: __init__.py  base.py  tensor.py
python/tcl/testing/: _ffi_api.py  example.py
src/testing/: hello.cc
tests/: test_jit.py
tests/testing/: test_experiment.py
